@@ -18,7 +18,6 @@
 
 package com.tamrielnetwork.vitaltpa.utils.commands;
 
-import com.google.common.collect.ImmutableMap;
 import com.tamrielnetwork.vitaltpa.VitalTpa;
 import com.tamrielnetwork.vitaltpa.utils.Chat;
 import org.bukkit.Bukkit;
@@ -37,10 +36,15 @@ import java.util.UUID;
 
 public class CmdSpec {
 
+	private static final String PLAYER = "%player%";
 	private static final HashMap<UUID, UUID> tpPlayerMap = new HashMap<>();
 	private static final HashMap<HashMap<UUID, UUID>, String> tpMap = new HashMap<>();
 	private static final VitalTpa main = JavaPlugin.getPlugin(VitalTpa.class);
 	private static final List<UUID> onActiveDelay = new ArrayList<>();
+	private CmdSpec() {
+
+		throw new IllegalStateException("Utility class");
+	}
 
 	public static void doDelay(Player senderPlayer, Player player) {
 
@@ -49,11 +53,11 @@ public class CmdSpec {
 				Chat.sendMessage(senderPlayer, "active-delay");
 				return;
 			}
-			Chat.sendMessage(senderPlayer, ImmutableMap.of("%player%", player.getName()), "tpa-yes");
-			Chat.sendMessage(player, ImmutableMap.of("%player%", senderPlayer.getName()), "tpa-accepted");
+			Chat.sendMessage(senderPlayer, java.util.Map.of(PLAYER, player.getName()), "tpa-yes");
+			Chat.sendMessage(player, java.util.Map.of(PLAYER, senderPlayer.getName()), "tpa-accepted");
 			onActiveDelay.add(senderPlayer.getUniqueId());
 			String timeRemaining = String.valueOf(main.getConfig().getLong("delay.time"));
-			Chat.sendMessage(player, ImmutableMap.of("%countdown%", timeRemaining), "countdown");
+			Chat.sendMessage(player, java.util.Map.of("%countdown%", timeRemaining), "countdown");
 			new BukkitRunnable() {
 
 				@Override
@@ -70,8 +74,8 @@ public class CmdSpec {
 				}
 			}.runTaskLater(main, (main.getConfig().getLong("delay.time") * 20L));
 		} else {
-			Chat.sendMessage(senderPlayer, ImmutableMap.of("%player%", player.getName()), "tpa-yes");
-			Chat.sendMessage(player, ImmutableMap.of("%player%", senderPlayer.getName()), "tpa-accepted");
+			Chat.sendMessage(senderPlayer, java.util.Map.of(PLAYER, player.getName()), "tpa-yes");
+			Chat.sendMessage(player, java.util.Map.of(PLAYER, senderPlayer.getName()), "tpa-accepted");
 			doTpa(senderPlayer, player);
 			doUnmap(senderPlayer);
 		}
@@ -87,8 +91,8 @@ public class CmdSpec {
 		}
 		tpPlayerMap.put(senderPlayer.getUniqueId(), player.getUniqueId());
 		tpMap.put(tpPlayerMap, type);
-		Chat.sendMessage(player, ImmutableMap.of("%player%", sender.getName()), playerMessage);
-		Chat.sendMessage(sender, ImmutableMap.of("%player%", player.getName()), senderMessage);
+		Chat.sendMessage(player, java.util.Map.of(PLAYER, sender.getName()), playerMessage);
+		Chat.sendMessage(sender, java.util.Map.of(PLAYER, player.getName()), senderMessage);
 		doTiming(sender);
 	}
 
